# app_2

./: pyproject.toml
app_2/: index.html  main.js  server.py
