[tool.poetry]
name = "app-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app_2"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
websockets = "^11.0.3"
names = "^0.3.0"
aiofile = "^3.8.7"
aiopath = "^0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
